    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.myluco.simpletodo.EditItemFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_editItem"
            android:id="@+id/tvItemBelow"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2" />

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:id="@+id/tvDescription"
             android:layout_row="1"
             android:layout_column="0"
             android:layout_columnSpan="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/etItemEdit"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:id="@+id/tvDate"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/etDateItem"
            android:hint="@string/hint_date"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:id="@+id/tvNotes"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/etNotes"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/tvStatus"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="1" />



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal"
            android:id="@+id/rgStatus"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="4">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo"
                android:id="@+id/rbTodo"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:id="@+id/rbDone"
                android:checked="false" />


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:id="@+id/tvPriority"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:id="@+id/rgPriority"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="5">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:id="@+id/rbLow"
                android:checked="false"
                android:textSize="@dimen/smallerFont" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:id="@+id/rbMedium"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:textSize="@dimen/smallerFont" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:id="@+id/rbHigh"
                android:layout_gravity="right"
                android:checked="false"
                android:textSize="@dimen/smallerFont" />

        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:id="@+id/btSave"
            android:layout_column="0"
            android:layout_row="6" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btCancel"
            android:layout_row="6"
            android:layout_column="1" />

    </GridLayout>

